src/objects/SBQQ__LookupData__c.object
<CustomObject>
    <customHelpPage>SBQQ__LookupQueryHelp</customHelpPage>
    <fields>
        <fullName>SBQQ__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with Product Selection Rules, represents the Product to which the Product Action applies.</description>
        <inlineHelpText>For use with Product Selection Rules, represents the Product to which the Product Action applies.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lookup Data</relationshipLabel>
        <relationshipName>LookupData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Product Selection Rules, indicates that the action is required.</description>
        <inlineHelpText>For Product Selection Rules, indicates that the action is required.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>For use with Product Selection Rules, specifies the type of action to be performed on the Product.</description>
        <inlineHelpText>For use with Product Selection Rules, specifies the type of action to be performed on the Product.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Enable &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Disable &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Show &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Hide &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Default Filter</fullName>
                </value>
                <value>
                    <fullName>Optional Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lookup Data</label>
    <nameField>
        <displayFormat>DATA-{0000}</displayFormat>
        <label>Lookup Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>